The app run with docker compose, the connection with databasase mysql work and initialize for itself---- try to run on docker with virtualenv is a good practice??--- try to create model and work with classes to build a better app(maybe arbnb)

--- a/flask/.vscode/settings.json
+++ b/flask/.vscode/settings.json
@@ -31,10 +31,10 @@
                 "authProtocol": "default"
             },
             "previewLimit": 50,
-            "server": "172.17.0.2",
-            "port": 3306,
+            "server": "localhost",
+            "port": 33060,
             "driver": "MySQL",
-            "name": "dockerApp",
+            "name": "DockerMysql",
             "database": "appflask",
             "username": "root",
             "password": "1375"
